--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -10,10 +10,14 @@
     --font-size-floating: clamp(0.7rem, 3vw, 0.8rem);
 }
 
-body {
-    background-image: url("https://fuvahmulah.mv/wp-content/uploads/2017/09/sunrise-bg-3.jpg");
-    background-position: center;
-    background-size: cover;
+body.modal-open{
+    -webkit-filter: blur(4px);
+    -moz-filter: blur(4px);
+    -o-filter: blur(4px);
+    -ms-filter: blur(4px);
+    filter: blur(4px);
+    /*filter: url("https://gist.githubusercontent.com/amitabhaghosh197/b7865b409e835b5a43b5/raw/1a255b551091924971e7dee8935fd38a7fdf7311/blur".svg#blur);*/
+    filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='4');
 }
 
 .container-blurry-glass {
