--- a/src/main/webapp/resources/css/user_posts_add_post.css
+++ b/src/main/webapp/resources/css/user_posts_add_post.css
@@ -49,7 +49,7 @@
 .modal-body .tab-container {
     width: 100%;
     height: 100%;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 }
 
 .modal-body .tab-container .tab {
